# autonomous-agent-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed_db.py
docs/: system-architecture.md
migrations/: env.py
migrations/versions/: d6b138e73b77_initial_schema_users_products_orders_.py
src/agent_api/: __init__.py  main.py
src/agent_api/agent/: engine.py  llm_client.py  registry.py  tools.py
src/agent_api/api/: dependencies.py
src/agent_api/api/routes/: chat.py
src/agent_api/core/: config.py  database.py  exceptions.py  logger.py  middleware.py
src/agent_api/models/: agent.py  domain.py  schemas.py
src/agent_api/repository/: order_repo.py
src/agent_api/services/: commerce.py
tests/: conftest.py
tests/integration/: test_api.py  test_database.py  test_domain_models.py  test_order_repo.py  test_order_repo_real_db.py
tests/unit/: test_commerce_service.py  test_config.py  test_engine.py  test_llm_client.py  test_middleware.py  test_registry.py  test_tools.py
