[project]
name = "autonomous-agent-api"
version = "0.1.0"
description = "Autonomous Agent API - Async FastAPI + ReAct + SQLAlchemy"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Samshad", email = "samshad.ru@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.2",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
    "logtail-python>=0.3.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "aiosqlite>=0.22.1",
]

[project.scripts]
autonomous-agent-api = "agent_api.main:app"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "agent_api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["tests/"]

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, UP: pyupgrade, N: flake8, W: mypy
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
